For more detailed instructions on filling in the ChangeLog form, see 
`/fi/doc/procedures/changelogs.txt'.
*******************************************************************************
<version for this commit> (in version.mak)

<standard changelog date stamp>
	* <changes go here...>

******************************************************************************
post-release patch

2002-02-12  Kevin Layer  <layer@crikey>

	* fi-emacs19.el: from mikel: bug11469: more fixes for same bug
	* fi-stream.el (lep::create-listener-stream): put in theoretical
	fix for a problem that Ahmon might have seen.  The change seems
	safe, in any case.

2001-11-29  Kevin Layer  <layer@crikey>

	* fi-basic-lep.el: fi::lep-debug is history, as it is now needed
	all the time because of a change I made to
	lep::make-session-for-lisp (to fix another bug).
	* fi-utils.el: fi:start-interface-via-file: bind do not set
	fi:connect-to-windows to `t'.

2001-11-14  Kevin Layer  <layer@crikey>

	* fi-site-init.el: bug11469: for emacs 21
	* fi-emacs19.el: bug11469: for emacs 21

2001-11-13  Kevin Layer  <layer@crikey>

	* fi-xemacs.el: fix for fix below

2001-11-12  Kevin Layer  <layer@crikey>

	* fi-basic-lep.el: bug10572: killing buffer can sometimes lead to
	an error in emacs.  It's a timing thing that only happens on some
	emacs and operating system combos.
	* fi-compile.el: make sure fi-xemacs.el is byte compiled!

2001-11-01  Kevin Layer  <layer@crikey>

    from mikel for spr24742
	* fi-xemacs.el: don't contact lisp over and over again, cache the
	value used for the first menu item, and uncache it on the last. 

******************************************************************************
2.2.6

2001-09-18  Kevin Layer  <layer@crikey>

	* emacsdir.pl,
	* Makefile: use /cygdrive/x instead of //x, since the latter
	doesn't work in the newest cygwin

******************************************************************************
2.2.5

2001-09-10  Kevin Layer  <layer@crikey>

    from smh: