@@ -8,7 +8,7 @@
 ;; Franz Incorporated provides this software "as is" without
 ;; express or implied warranty.
 
-;; $Id: fi-lep.el,v 1.85.6.3.2.1 2001/08/23 22:03:45 layer Exp $
+;; $Id: fi-lep.el,v 1.85.6.3.2.2 2002/04/23 19:54:43 layer Exp $
 
 (defun fi:lisp-arglist (string)
   "Dynamically determine, in the Common Lisp environment, the arglist for
@@ -487,7 +487,8 @@ buffer, the package is parsed at file visit time."
 			    (error nil))))
 	       (format "%s"
 		       (if start
-			   (buffer-substring start (point))
+			   (fi::defontify-string
+			       (buffer-substring start (point)))
 			 (read-string (format "form to %s: " type))))))
     (() (expansion)
      (fi:show-some-text fi:package expansion))
@@ -527,7 +528,7 @@ beginning of words in target symbols."
 				(buffer-substring opoint
 						  (match-beginning 0))))))
 		(point)))
-	 (pattern (format "%s" (buffer-substring beg end)))
+	 (pattern (fi::defontify-string (buffer-substring beg end)))
 	 (functions-only (if (eq (char-after (1- real-beg)) ?\() t nil))
 	 (downcase (not (fi::all-upper-case-p pattern)))
 	 (xxalist (fi::lisp-complete-1 pattern xpackage functions-only))
