@@ -9,6 +9,10 @@ For more detailed instructions on filling in the ChangeLog form, see
 ******************************************************************************
 post-release patch
 
+2002-04-23    <layer@HOBART>
+
+	* fi-lep.el: bug12070: fontification fixes
+
 2002-02-12  Kevin Layer  <layer@crikey>
 
 	* fi-emacs19.el: from mikel: bug11469: more fixes for same bug
